--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
-<textarea id="html" placeholder="HTML body"></textarea>
-<textarea id="css" placeholder="CSS"></textarea>
-<textarea id="js" placeholder="JavaScript"></textarea>
-<input id="csssrc" placeholder="CSS source" size="50"><input id="jssrc" placeholder="JavaScript source" size="50">
-<iframe id="code"></iframe>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1"><meta charset="utf-8">
+    <link rel="stylesheet" href="editor.css">
+  </head>
+  <body>
+    <textarea id="html" placeholder="HTML body"></textarea>
+    <textarea id="css" placeholder="CSS"></textarea>
+    <textarea id="js" placeholder="JavaScript"></textarea>
+    <input id="csssrc" placeholder="CSS source" size="50"><input id="jssrc" placeholder="JavaScript source" size="50">
+    <iframe id="code"></iframe>
+    <script src="editor.js"></script>
+  </body>
+</html>
