--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"><meta charset="utf-8">
     <link rel="stylesheet" href="editor.css">
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/115348427?v=4">
   </head>
   <body>
     <textarea id="html" placeholder="HTML body"></textarea>
