--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>HTML/CSS/JS IDE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"><meta charset="utf-8">
     <link rel="stylesheet" href="editor.css">
     <link rel="icon" href="https://avatars.githubusercontent.com/u/115348427?v=4">
@@ -9,7 +10,9 @@
     <textarea id="html" placeholder="HTML body"></textarea>
     <textarea id="css" placeholder="CSS"></textarea>
     <textarea id="js" placeholder="JavaScript"></textarea>
+    <br>
     <input id="csssrc" placeholder="CSS source" size="50"><input id="jssrc" placeholder="JavaScript source" size="50">
+    <br>
     <iframe id="code"></iframe>
     <script src="editor.js"></script>
   </body>
