--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="icon" href="https://avatars.githubusercontent.com/u/115348427?v=4">
   </head>
   <body>
-    <textarea id="html" placeholder="HTML body"></textarea>
-    <textarea id="css" placeholder="CSS"></textarea>
-    <textarea id="js" placeholder="JavaScript"></textarea>
+    <textarea id="html" placeholder="HTML body" spellcheck="false"></textarea>
+    <textarea id="css" placeholder="CSS" spellcheck="false"></textarea>
+    <textarea id="js" placeholder="JavaScript" spellcheck="false"></textarea>
     <br>
     <input id="csssrc" placeholder="CSS source" size="50"><input id="jssrc" placeholder="JavaScript source" size="50">
     <br>
